--- a/src/components/ImageScroller.css
+++ b/src/components/ImageScroller.css
@@ -27,8 +27,27 @@
   align-items: center;
 }
 
-.images img {
-  max-width: 100%;
-  width: 600px; /* Set the maximum width for images */
+.image-container {
+  position: relative;
+  width: 100%;
+  max-width: 600px; /* Set the maximum width for images */
   margin-bottom: 20px;
+}
+
+.image-container img {
+  width: 100%;
+  display: block;
+}
+
+.image-container button {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px 20px;
+  font-size: 1em;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
